HR 1st level shortlisting frontend functionality mapping done and assigned details, diplamo level not showing bug fixed.
HR 1st level shortlisting frontend functionality mapping done and assigned details, diplamo level not showing bug fixed.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -806,7 +806,7 @@ h5 {
 .ant-tabs-tab {
   height: auto !important;
   color: $black;
-  min-width: 140px !important;
+  min-width: 120px !important;
   max-width: 100% !important;
   font-weight: 200 !important;
   line-height: 35px !important;
